Bug 615186, clear mouse selection and capturing state when opening a modal dialog, r=smaug,a=blocking